Fix scrollbar issue

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -21,6 +21,7 @@ $color-text-secondary: #bed0ff;
 
 html {
   font-size: 62.5%;
+  overflow: hidden;
 }
 
 body {
